--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <main class="site_content" id="site_content">
+    <main class="site_content">
       {{ content }}
     </main>
 
