refactor: replace extension to post

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,7 +4,7 @@
 
 @import "../vendor/bootstrap/stylesheets/bootstrap";
 
-@import "./components/extension_list";
-@import "./components/extension_search";
+@import "./components/post_list";
+@import "./components/post_search";
 
 @import "./bootstrap";
