--- a/_sass/components/_post_list.scss
+++ b/_sass/components/_post_list.scss
@@ -1,8 +1,8 @@
-.extension_list {
+.post_list {
 
 }
 
-.extension_row {
+.post_row {
   display: block;
   margin-top: 20px;
   padding: 10px 15px 10px 15px;
@@ -14,10 +14,10 @@
   }
 }
 
-.extension_row__title {
+.post_row__title {
 
 }
 
-.extension_row__description {
+.post_row__description {
   font-size: $font-size-small;
 }
