--- a/_includes/post_search.html
+++ b/_includes/post_search.html
@@ -1,6 +1,6 @@
 <div class="post_search">
   <div class="container">
-    <input id="post_search__input" type="text" placeholder="Search post..." class="form-control post_search__input" />
+    <input id="post_search__input" type="text" placeholder="Search extension..." class="form-control post_search__input" />
   </div>
   <script type="text/javascript">
     $('#post_search__input').on('change', function() {
