--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,44 @@
 ---
 layout: default
 ---
-<div class="container">
-  <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
-    <header class="post-header">
-      <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-      <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-    </header>
-
-    <div class="post-content" itemprop="articleBody">
-      {{ content }}
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  <header class="block block--top">
+    <div class="container">
+      <div class="clearfix">
+        <h1 class="post__title pull-left">{{ page.title }}</h1>
+        <div class="pull-right">
+          <i class="fa fa-comments" aria-hidden="true"></i>
+          <span id="post__number_of_comments">0</span>
+        </div>
+        <div class="pull-right">
+          <i class="fa fa-heart" aria-hidden="true"></i>
+          <span id="post__likes">0</span>
+        </div>
+      </div>
     </div>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
 
-  </article>
-</div>
+        <div class="post__description">{{ page.description }}</div>
+
+        {% include links_block.html %}
+
+        <div class="post__content">
+          {{ content }}
+        </div>
+
+        <h2>Comments</h2>
+        <div class="post__comments" id="post__comments">
+          <div class="well">No comments here</div>
+        </div>
+
+      </div>
+      <div class="col-md-3">
+        {% include github_block.html %}
+        {% include rubygems_block.html %}
+      </div>
+    </div>
+  </div>
+</article>
