--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,5 +6,10 @@
 
 @import "./components/post_list";
 @import "./components/post_search";
+@import "./components/block";
+@import "./components/post";
+@import "./components/links_block";
+@import "./components/info_block";
+@import "./components/marks_block";
 
 @import "./bootstrap";
