--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -1,9 +1,23 @@
 <div class="info_block">
   <div class="info_block__title">GitHub</div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <i class="fa fa-eye" aria-hidden="true"></i> 21
+    </div>
+    <div class="col-md-4">
+      <i class="fa fa-star" aria-hidden="true"></i> 43
+    </div>
+    <div class="col-md-4">
+      <i class="fa fa-code-fork" aria-hidden="true"></i> 76
+    </div>
+  </div>
+
   <dl class="dl-horizontal marks_block">
-    <dt class="marks_block__item_title">Stars</dt>
-    <dd class="marks_block__item_value">22 <i class="fa fa-star" aria-hidden="true"></i></dd>
-    <dt class="marks_block__item_title">Forks</dt>
-    <dd class="marks_block__item_value">45 <i class="fa fa-code-fork" aria-hidden="true"></i></dd>
+    <dt class="marks_block__item_title">Issues</dt>
+    <dd class="marks_block__item_value">22</dd>
+    <dt class="marks_block__item_title">Commits</dt>
+    <dd class="marks_block__item_value">45</dd>
   </dl>
+
 </div>
