--- a/_includes/rubygems_block.html
+++ b/_includes/rubygems_block.html
@@ -3,7 +3,7 @@
   <dl class="dl-horizontal marks_block">
     <dt class="marks_block__item_title">Last verion</dt>
     <dd class="marks_block__item_value">0</dd>
-    <dt class="marks_block__item_title">Total downlaods</dt>
+    <dt class="marks_block__item_title">Tot. downl.</dt>
     <dd class="marks_block__item_value">0</dd>
   </dl>
 </div>
