--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,5 +11,6 @@
 @import "./components/links_block";
 @import "./components/info_block";
 @import "./components/marks_block";
+@import "./components/summery_block";
 
 @import "./bootstrap";
