--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -1,23 +1,29 @@
 <div class="info_block">
   <div class="info_block__title">GitHub</div>
 
-  <div class="row">
-    <div class="col-md-4">
-      <i class="fa fa-eye" aria-hidden="true"></i> 21
-    </div>
-    <div class="col-md-4">
-      <i class="fa fa-star" aria-hidden="true"></i> 43
-    </div>
-    <div class="col-md-4">
-      <i class="fa fa-code-fork" aria-hidden="true"></i> 76
+  <div class="info_block__summery">
+    <div class="row">
+      <div class="col-md-4">
+        <i class="fa fa-eye" aria-hidden="true"></i><span class="info_block__summery_value" id="github_block__watchers">0</span>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-star" aria-hidden="true"></i><span class="info_block__summery_value" id="github_block__watchers">0</span>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-code-fork" aria-hidden="true"></i><span class="info_block__summery_value" id="github_block__watchers">0</span>
+      </div>
     </div>
   </div>
 
   <dl class="dl-horizontal marks_block">
     <dt class="marks_block__item_title">Issues</dt>
-    <dd class="marks_block__item_value">22</dd>
+    <dd class="marks_block__item_value" id="github_block__issues">22</dd>
     <dt class="marks_block__item_title">Commits</dt>
-    <dd class="marks_block__item_value">45</dd>
+    <dd class="marks_block__item_value" id="github_block__watchers">45</dd>
+    <dt class="marks_block__item_title">Last commit</dt>
+    <dd class="marks_block__item_value" id="github_block__last_commit">2015-10-12</dd>
+    <dt class="marks_block__item_title">Contributors</dt>
+    <dd class="marks_block__item_value" id="github_block__contributors">45</dd>
   </dl>
 
 </div>
