--- a/_includes/pages/search.html
+++ b/_includes/pages/search.html
@@ -1,6 +1,6 @@
 {% include post_search.html %}
 <div class="container">
-  <div id="search__result" class="post_list">
+  <div id="post_list" class="post_list">
     <!-- {% for post in site.posts %}
     <a class="post_row clearfix" href="{{ post.url | prepend: site.baseurl }}">
       <div class="pull-left">
