--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,5 +16,8 @@
   <script src="/vendor/socket.io.js"></script>
   <script src="/js/common.js"></script>
   <script src="/js/mydataspace.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="/js/controller.js"></script>
+  <script type="text/javascript">
+    controller.init();
+  </script>
 </head>
