feat: load data

--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -4,25 +4,26 @@
   <div class="info_block__summery">
     <div class="row">
       <div class="col-md-4">
+        <i class="fa fa-eye" aria-hidden="true"></i><span class="info_block__summery_value post__github_watchers">-</span>
       </div>
       <div class="col-md-4">
-        <i class="fa fa-star" aria-hidden="true"></i><span class="info_block__summery_value post_{{post_name}}__github_stars">0</span>
+        <i class="fa fa-star" aria-hidden="true"></i><span class="info_block__summery_value post__github_stars">-</span>
       </div>
       <div class="col-md-4">
-        <i class="fa fa-code-fork" aria-hidden="true"></i><span class="info_block__summery_value post_{{post_name}}__github_forks">0</span>
+        <i class="fa fa-code-fork" aria-hidden="true"></i><span class="info_block__summery_value post__github_forks">-</span>
       </div>
     </div>
   </div>
 
   <dl class="dl-horizontal marks_block">
     <dt class="marks_block__item_title">Issues</dt>
-    <dd class="marks_block__item_value post_{{post_name}}__github_issues">22</dd>
+    <dd class="marks_block__item_value post__github_issues">-</dd>
     <dt class="marks_block__item_title">Commits</dt>
-    <dd class="marks_block__item_value post_{{post_name}}__github_commits">45</dd>
+    <dd class="marks_block__item_value post__github_commits">-</dd>
     <dt class="marks_block__item_title">Last commit</dt>
-    <dd class="marks_block__item_value post_{{post_name}}__github_lastCommit">2015-10-12</dd>
+    <dd class="marks_block__item_value post__github_lastCommit">-</dd>
     <dt class="marks_block__item_title">Contributors</dt>
-    <dd class="marks_block__item_value post_{{post_name}}__github_contributors">45</dd>
+    <dd class="marks_block__item_value post__github_contributors">-</dd>
   </dl>
 
 </div>
