--- a/_includes/links_block.html
+++ b/_includes/links_block.html
@@ -1,17 +1,11 @@
 <div class="links_block clearfix">
   <div class="links_block__item">
-    {% if page.website %}
-      <a href="{{page.website}}">Website</a>
-    {% endif %}
+    <a class="post__websiteURL">Website</a>
   </div>
   <div class="links_block__item">
-    {% if page.source_code %}
-      <a href="{{page.source_code}}">Source Code</a>
-    {% endif %}
+    <a class="post__sourceCodeURL">Source Code</a>
   </div>
   <div class="links_block__item">
-    {% if page.demo %}
-      <a href="{{page.demo}}">Demo</a>
-    {% endif %}
+    <a class="post__demoURL">Demo</a>
   </div>
 </div>
