--- a/_includes/pages/search.html
+++ b/_includes/pages/search.html
@@ -1,20 +1,6 @@
 {% include post_search.html %}
 <div class="container">
-  <div id="post_list" class="post_list">
-    <!-- {% for post in site.posts %}
-    <a class="post_row clearfix" href="{{ post.url | prepend: site.baseurl }}">
-      <div class="pull-left">
-        <div class="post_row__title">
-          {{ post.title }}
-        </div>
-        <div class="post_row__description">
-          {{ post.description }}
-        </div>
-      </div>
-      {% include summery_block.html include_github=true %}
-    </a>
-    {% endfor %} -->
-  </div>
+  <div id="post_list" class="post_list"></div>
   <script type="text/javascript">
     ;
   </script>
