--- a/_includes/rubygems_block.html
+++ b/_includes/rubygems_block.html
@@ -2,8 +2,8 @@
   <div class="info_block__title">RubyGems</div>
   <dl class="dl-horizontal marks_block">
     <dt class="marks_block__item_title">Last verion</dt>
-    <dd class="marks_block__item_value">0</dd>
+    <dd class="marks_block__item_value">-</dd>
     <dt class="marks_block__item_title">Tot. downl.</dt>
-    <dd class="marks_block__item_value">0</dd>
+    <dd class="marks_block__item_value">-</dd>
   </dl>
 </div>
