--- a/_includes/summery_block.html
+++ b/_includes/summery_block.html
@@ -1,19 +1,19 @@
 <div class="summery_block clearfix">
   <div class="summery_block__item">
-    <i class="fa fa-comments" aria-hidden="true"></i><span class="summery_block__item_value">1</span>
+    <i class="fa fa-comments" aria-hidden="true"></i><span class="summery_block__item_value post__n_comments">-</span>
   </div>
   <div class="summery_block__item">
-    <i class="fa fa-heart" aria-hidden="true"></i><span class="summery_block__item_value">32</span>
+    <i class="fa fa-heart" aria-hidden="true"></i><span class="summery_block__item_value post__n_likes">-</span>
   </div>
   {% if include.include_github %}
   <div class="summery_block__item">
-    <i class="fa fa-code-fork" aria-hidden="true"></i><span class="summery_block__item_value">20</span>
+    <i class="fa fa-code-fork" aria-hidden="true"></i><span class="summery_block__item_value post__github_forks">-</span>
   </div>
   <div class="summery_block__item">
-    <i class="fa fa-star" aria-hidden="true"></i><span class="summery_block__item_value">2</span>
+    <i class="fa fa-star" aria-hidden="true"></i><span class="summery_block__item_value post__github_stars">-</span>
   </div>
   <div class="summery_block__item">
-    <i class="fa fa-eye" aria-hidden="true"></i><span class="summery_block__item_value">32</span>
+    <i class="fa fa-eye" aria-hidden="true"></i><span class="summery_block__item_value post__github_watchers">-</span>
   </div>
   {% endif %}
 </div>
