--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -8,3 +8,10 @@
 .navbar-nav > li > a {
   text-transform: lowercase;
 }
+
+.disabled {
+  &, &:hover, &:active {
+    color: gray;
+    pointer-events: none;
+  }
+}
