--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
 <header class="site__header">
   <nav class="navbar navbar-inverse">
     <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -11,39 +10,20 @@
         </button>
         <a class="navbar-brand" href="/extensions">Spreex</a>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         {% if page.name != 'index.html' %}
-        <!-- <form class="navbar-form navbar-left" role="search">
+        <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
-        </form> -->
+        </form>
         {% endif %}
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/extensions">Extensions</a></li>
-          <!-- <li><a href="/chat">Chat</a></li> -->
-          <li><a href="#" class="last-menu-item">Sign in</a></li>
-          <!-- <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li> -->
+          <li><a href="/sign_in" class="last-menu-item">Sign in</a></li>
         </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+      </div>
+    </div>
   </nav>
-  <script type="text/javascript">
-    document.getElementById('menu__search').addEventListener('click', function(event) {
-      controller.load()
-      event.preventDefault();
-    });
-  </script>
 </header>
