feat: new posts

--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -3,13 +3,13 @@
 
   <div class="info_block__summery">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-xs-4">
         <i class="fa fa-eye" aria-hidden="true"></i><span class="info_block__summery_value post__github_watchers">-</span>
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-4">
         <i class="fa fa-star" aria-hidden="true"></i><span class="info_block__summery_value post__github_stars">-</span>
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-4">
         <i class="fa fa-code-fork" aria-hidden="true"></i><span class="info_block__summery_value post__github_forks">-</span>
       </div>
     </div>
@@ -21,7 +21,7 @@
     <dt class="marks_block__item_title">Commits</dt>
     <dd class="marks_block__item_value post__github_commits">-</dd>
     <dt class="marks_block__item_title">Last commit</dt>
-    <dd class="marks_block__item_value post__github_lastCommit">-</dd>
+    <dd class="marks_block__item_value post__github_lastCommitDate">-</dd>
     <dt class="marks_block__item_title">Contributors</dt>
     <dd class="marks_block__item_value post__github_contributors">-</dd>
   </dl>
