--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/extensions">Spreex</a>
+        <a class="navbar-brand" href="/">Spreex</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         {% if page.name != 'index.html' %}
@@ -20,7 +20,7 @@
         </form>
         {% endif %}
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/extensions">Extensions</a></li>
+          <li><a href="/">Extensions</a></li>
           <li><a href="/sign_in" class="last-menu-item">Sign in</a></li>
         </ul>
       </div>
