--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -35,3 +35,5 @@ $gradient: linear-gradient(450deg, #f7d45e 0%, rgb(255, 255, 255) 100%) rgba(246
 $gradient-hover: linear-gradient(450deg, gray 0%, rgb(255, 255, 255) 100%) rgba(246, 255, 0, 0.25);
 $block-vpadding: 10px;
 $block-hpadding: 15px;
+
+$top-block-height: 100px;
