--- a/_includes/pages/search.html
+++ b/_includes/pages/search.html
@@ -1,4 +1,18 @@
-{% include post_search.html %}
+<div class="post_search block block--top">
+  <div class="container">
+    <input id="post_search__input" type="text" placeholder="Search extension..." class="form-control post_search__input" />
+  </div>
+  <script type="text/javascript">
+    document.getElementById('post_search__input').value = common.getURLParamByName('search', window.location.href);
+    document.getElementById('post_search__input').addEventListener('change', function() {
+      controller.load(controller.getCurrentURL(), { search: document.getElementById('post_search__input').value });
+    });
+    document.getElementById('post_search__input').addEventListener('keydown', function() {
+      controller.load(controller.getCurrentURL(), { search: document.getElementById('post_search__input').value });
+    });
+  </script>
+</div>
+
 <div class="container">
   <div id="post_list" class="post_list"></div>
   <script type="text/javascript">
