--- a/_sass/components/_post_search.scss
+++ b/_sass/components/_post_search.scss
@@ -1,18 +1,11 @@
-$extension-search-height: 100px;
-$extension-search-input-height: 50px;
+$post-search-input-height: 50px;
 
 .post_search {
-  border-bottom: $border-thickness solid $border-color;
-  height: $extension-search-height;
-  background: $gradient;
-  &:hover {
-    background: $gradient-hover;
-  }
 }
 
 .post_search__input {
-  height: $extension-search-input-height;
-  margin-top: ($extension-search-height - $extension-search-input-height) / 2;
+  height: $post-search-input-height;
+  margin-top: ($top-block-height - $post-search-input-height) / 2;
   border-radius: $border-radius;
   border: 0;
   border-bottom: $border-thickness solid $border-color;
