--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,12 +12,12 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         {% if page.name != 'index.html' %}
-        <form class="navbar-form navbar-left" role="search">
+        <!-- <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        </form> -->
         {% endif %}
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Extensions</a></li>
