--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,6 +12,7 @@
 @import "./components/info_block";
 @import "./components/marks_block";
 @import "./components/summery_block";
+@import "./components/signin_block";
 
 @import "./bootstrap";
 
