--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,8 @@
         {% endif %}
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Extensions</a></li>
-          <li><a href="/sign_in" class="last-menu-item">Sign in</a></li>
+          <li><a href="#" id="main_menu__signin_item" class="last-menu-item" data-toggle="modal" data-target=".signin_modal">Sign in</a></li>
+          <li><a href="#" id="main_menu__signout_item" class="last-menu-item hidden">Sign out</a></li>
         </ul>
       </div>
     </div>
