--- a/_includes/pages/search.html
+++ b/_includes/pages/search.html
@@ -3,19 +3,20 @@
     <input id="post_search__input" type="text" placeholder="Search extension..." class="form-control post_search__input" />
   </div>
   <script type="text/javascript">
-    document.getElementById('post_search__input').value = common.getURLParamByName('search', window.location.href);
+    document.getElementById('post_search__input').value =
+      common.getURLParamByName('search', window.location.href);
     document.getElementById('post_search__input').addEventListener('change', function() {
-      controller.load(controller.getCurrentURL(), { search: document.getElementById('post_search__input').value });
+      controller.load(controller.getCurrentURL(), {
+        search: document.getElementById('post_search__input').value
+      });
     });
-    document.getElementById('post_search__input').addEventListener('keydown', function() {
-      controller.load(controller.getCurrentURL(), { search: document.getElementById('post_search__input').value });
+    document.getElementById('post_search__input').addEventListener('keyup', function() {
+      controller.load(controller.getCurrentURL(), {
+        search: document.getElementById('post_search__input').value
+      });
     });
   </script>
 </div>
-
 <div class="container">
   <div id="post_list" class="post_list"></div>
-  <script type="text/javascript">
-    ;
-  </script>
 </div>
