--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,10 @@
+{% if jekyll.environment == "local" %}
+  {% assign api_url = "http://localhost:8080" %}
+  {% assign api_websocket_url = "http://localhost:8080" %}
+{% else %}
+  {% assign api_url = site.api_url %}
+  {% assign api_websocket_url = site.api_websocket_url %}
+{% endif %}
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +26,6 @@
   <script src="/js/uihelper.js"></script>
   <script src="/js/controller.js"></script>
   <script type="text/javascript">
-    controller.init();
+    controller.init('{{ api_url }}', '{{ api_websocket_url }}');
   </script>
 </head>
