--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
   <script src="/js/mydataspace.js"></script>
   <script src="/js/uihelper.js"></script>
   <script src="/js/controller.js"></script>
+  <script src="/js/sync.js"></script>
   <script type="text/javascript">
     controller.init('{{ api_url }}', '{{ api_websocket_url }}');
   </script>
