--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
         </form> -->
         {% endif %}
         <ul class="nav navbar-nav navbar-right">
+          <li><button onclick="Sync.sync()">Sync</button></li>
           <li><a href="/">Extensions</a></li>
           <li><a href="#" id="main_menu__signin_item" class="last-menu-item" data-toggle="modal" data-target=".signin_modal">Sign in</a></li>
           <li><a href="#" id="main_menu__signout_item" class="last-menu-item hidden">Sign out</a></li>
