--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
 
   <script src="/vendor/jquery/jquery.js" charset="utf-8"></script>
   <script src="/vendor/bootstrap/bootstrap.js" charset="utf-8"></script>
+  <script src="http://npmcdn.com/github-api/dist/GitHub.bundle.min.js" charset="utf-8"></script>
   <script src="/vendor/socket.io.js"></script>
   <script src="/js/common.js"></script>
   <script src="/js/mydataspace.js"></script>
