feat: use my-data.space version of common & mds

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,13 @@
   <script src="/vendor/bootstrap/bootstrap.js" charset="utf-8"></script>
   <script src="http://npmcdn.com/github-api/dist/GitHub.bundle.min.js" charset="utf-8"></script>
   <script src="/vendor/socket.io.js"></script>
-  <script src="/js/common.js"></script>
-  <script src="/js/mydataspace.js"></script>
+
+  <script src="http://my-data.space/js/common.js"></script>
+  <script src="http://my-data.space/js/mydataspace.js"></script>
+
+  <!-- <script src="/js/common.js"></script>
+  <script src="/js/mydataspace.js"></script> -->
+
   <script src="/js/uihelper.js"></script>
   <script src="/js/controller.js"></script>
   <script src="/js/sync.js"></script>
