--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,6 +43,9 @@
 
     for (var link of document.getElementsByTagName('a')) {
       link.addEventListener('click', function(event) {
+        if (/^\w+\:\/\//.test(this.href) && this.href.indexOf('{{ site.url }}') !== 0 && this.href.indexOf('http://localhost') !== 0) {
+          return;
+        }
         event.preventDefault();
         controller.load(this.href);
         return false;
