--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -49,3 +49,33 @@
   font-size: $font-size-small;
   padding: 0;
 }
+
+.post__content {
+  overflow: hidden;
+  height: 350px;
+  position: relative;
+}
+
+.post__content_footer {
+  text-align: center;
+  cursor: pointer;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: rgba(0, 0, 0, 0.5);
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100 */
+  background: -moz-linear-gradient(bottom,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+
+}
+
+.post__content--extended {
+  overflow:inherit;
+  height: auto;
+  .post__content_footer {
+    display: none;
+  }
+}
