--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -1,6 +1,6 @@
 .post__description {
-  padding: $block-vpadding * 2 0 $block-vpadding * 2 0;
-  font-size: $font-size-large;
+  margin-top: $block-vpadding * 2;
+  font-size: $font-size-large * 1.3;
 }
 
 .post--row {
@@ -50,10 +50,18 @@
   padding: 0;
 }
 
+.links_block {
+  margin: $block-vpadding * 4 0;
+}
+
 .post__content {
   overflow: hidden;
   height: 350px;
   position: relative;
+  opacity: 0.5;
+  h1:first-child, h2:first-child, h3:first-child {
+    margin-top: 0;
+  }
 }
 
 .post__content_footer {
@@ -63,7 +71,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.7);
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100 */
   background: -moz-linear-gradient(bottom,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -73,8 +81,10 @@
 }
 
 .post__content--extended {
+  opacity: 1;
   overflow:inherit;
   height: auto;
+  transition: opacity 0.5s;
   .post__content_footer {
     display: none;
   }
