--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -22,7 +22,6 @@
   position: relative;
 }
 
-
 .post__summery {
   position: absolute;
   top: 50%;
@@ -59,6 +58,9 @@
   height: 350px;
   position: relative;
   opacity: 0.5;
+  h1:first-child {
+    display: none;
+  }
   h1:first-child, h2:first-child, h3:first-child {
     margin-top: 0;
   }
