fix: bug with description

--- a/_includes/pages/post.html
+++ b/_includes/pages/post.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <div class="post__description">{{ page.description }}</div>
+        <div class="post__description post__github_description">{{ page.description }}</div>
 
         {% include links_block.html %}
 
