feat(sync): more github fields

--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -1,5 +1,5 @@
 <div class="info_block">
-  <div class="info_block__title">GitHub</div>
+  <div class="info_block__title"><a class="post__github_url" href="https://github.com">GitHub</a></div>
 
   <div class="info_block__summery">
     <div class="row">
@@ -16,6 +16,8 @@
   </div>
 
   <dl class="dl-horizontal marks_block">
+    <dt class="marks_block__item_title">Owner</dt>
+    <dd class="marks_block__item_value">-</dd>
     <dt class="marks_block__item_title">Issues</dt>
     <dd class="marks_block__item_value post__github_issues">-</dd>
     <dt class="marks_block__item_title">Commits</dt>
