--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -17,7 +17,10 @@
 
   <dl class="dl-horizontal marks_block">
     <dt class="marks_block__item_title">Owner</dt>
-    <dd class="marks_block__item_value"><img class="post__github_owerIMG" src="" /></dd>
+    <dd class="marks_block__item_value">
+      <img class="post__github_owerIMG" src="" />
+      <a class="post__github_ownerURL post__github_ownerLogin" href=""></a>
+    </dd>
     <dt class="marks_block__item_title">Issues</dt>
     <dd class="marks_block__item_value post__github_issues">-</dd>
     <dt class="marks_block__item_title">Commits</dt>
