feat: github image

--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -18,7 +18,7 @@
   <dl class="dl-horizontal marks_block">
     <dt class="marks_block__item_title">Owner</dt>
     <dd class="marks_block__item_value">
-      <img class="post__github_owerIMG" src="" />
+      <img class="post__github_ownerIMG" src="" />
       <a class="post__github_ownerURL post__github_ownerLogin" href=""></a>
     </dd>
     <dt class="marks_block__item_title">Issues</dt>
@@ -26,7 +26,11 @@
     <dt class="marks_block__item_title">Commits</dt>
     <dd class="marks_block__item_value post__github_commits">-</dd>
     <dt class="marks_block__item_title">Last commit</dt>
-    <dd class="marks_block__item_value post__github_lastCommitDate">-</dd>
+    <dd class="marks_block__item_value">
+      <span class="post__github_lastCommitDate"></span>
+      <img class="post__github_lastCommitAuthorIMG" src="" />
+      <a class="post__github_ownerURL post__github_lastCommitAuthorURL post__github_lastCommitAuthorLogin" href=""></a>
+    </dd>
     <dt class="marks_block__item_title">Contributors</dt>
     <dd class="marks_block__item_value post__github_contributors">-</dd>
   </dl>
