--- a/_sass/components/_info_block.scss
+++ b/_sass/components/_info_block.scss
@@ -26,3 +26,7 @@
   font-weight: bold !important;
   margin-left: 5px;
 }
+
+.post__github_ownerIMG, .post__github_lastCommitAuthorIMG {
+  width: 30px;
+}
