feat(sync): github auth

--- a/_sass/components/_info_block.scss
+++ b/_sass/components/_info_block.scss
@@ -30,3 +30,8 @@
 .post__github_ownerIMG, .post__github_lastCommitAuthorIMG {
   width: 30px;
 }
+
+.post__github_lastCommitDate {
+  white-space: nowrap;
+  display: block;
+}
