--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
   <script src="/js/controller.js"></script>
   <script src="/js/sync.js"></script>
   <script type="text/javascript">
-    controller.init('{{ api_url }}', '{{ api_websocket_url }}');
+    controller.init('{{ api_url }}', '{{ api_websocket_url }}', '{{ client_id }}');
     // Actual default values
     var md = new Remarkable({
       html:         true,        // Enable HTML tags in source
