feat: open web site/source code/demo in new page

--- a/_includes/links_block.html
+++ b/_includes/links_block.html
@@ -1,11 +1,11 @@
 <div class="links_block clearfix">
   <div class="links_block__item">
-    <a class="post__websiteURL">Website</a>
+    <a class="post__websiteURL" target="_blank">Website</a>
   </div>
   <div class="links_block__item">
-    <a class="post__sourceCodeURL">Source Code</a>
+    <a class="post__sourceCodeURL" target="_blank">Source Code</a>
   </div>
-  <div class="links_block__item">
+  <div class="links_block__item" target="_blank">
     <a class="post__demoURL">Demo</a>
   </div>
 </div>
