feat: small modifications

--- a/_includes/pages/post.html
+++ b/_includes/pages/post.html
@@ -22,8 +22,8 @@
         </div>
 
         <h2>Comments</h2>
+        <div id="post__no_comments" class="well">No comments here</div>
         <div class="post__comments">
-          <div class="well">No comments here</div>
         </div>
 
       </div>
