--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,6 +13,7 @@
 @import "./components/marks_block";
 @import "./components/summery_block";
 @import "./components/signin_block";
+@import "./components/comment";
 
 @import "./bootstrap";
 
